# C-Repo

./: CMakeLists.txt
dev/: CommitHistory.txt
dev/koh/InterviewPrep/BasicString/: stranagram.c  strpallindrome.c
dev/koh/InterviewPrep/PlayingWithNumbers/: numpallindrome.c
